@@ -51,18 +51,22 @@ DIST VMware-workstation-4.5.3-19414.tar.gz 42444031 RMD160 0f0b7a2249a12b75c9d81
 DIST VMware-workstation-5.5.1-19175.tar.gz 100090786 RMD160 79735996e1d79e96783db7d2dac67b7b7f605f47 SHA1 ed90b829b62d371eeb83cc41cd7bfb32d2a2f6e7 SHA256 7346676d0ec1c72c3f8d3e4ced37311a63c99d757998b162a08724466504e2c3
 DIST vmware-any-any-update101.tar.gz 296409 RMD160 d8994b91492257d8b8e08480ab27fc307fc34095 SHA1 43714052429c1574cdf086a052859657affff0b0 SHA256 b12e3a70117ef26a85c8e01a23ea7d21b62bbc86998368114f9f7932390d2037
 DIST vmware.png 470 RMD160 759a5530b3bb605e6bc2c1e203490163d320485d SHA1 2262b25fb3ec66ed7b209ff5205fb9b289ca1afc SHA256 9bec91ecc32fa913141ca303abf1abec988ebc7fb4f27389f173bf3493bffb9b
-EBUILD vmware-workstation-3.2.1.2242-r11.ebuild 2203 RMD160 6e7a88a5fc66f802a926649227e448190cb73d4d SHA1 a0fa5da02811c3726fe32c0633eb44ae4ceb6430 SHA256 2b07d4ce7762f9c84f82da287043effc52906b5a476798c6beb7e2198a11dad7
-MD5 98264fab52f5bc85bfa26da398f2f083 vmware-workstation-3.2.1.2242-r11.ebuild 2203
-RMD160 6e7a88a5fc66f802a926649227e448190cb73d4d vmware-workstation-3.2.1.2242-r11.ebuild 2203
-SHA256 2b07d4ce7762f9c84f82da287043effc52906b5a476798c6beb7e2198a11dad7 vmware-workstation-3.2.1.2242-r11.ebuild 2203
-EBUILD vmware-workstation-4.5.3.19414-r4.ebuild 1760 RMD160 c217bdcc2d5fa9d956c4f9dc4bc2b5256f4e7f41 SHA1 f8c48728f6d02354dcd11781f43bd5a45a25534e SHA256 0e6ff640704ffc74d4092b950169d55c58a64fb2921961eb27ed28b1bc715e0d
-MD5 018af801e7e5a462afacf53d5638b274 vmware-workstation-4.5.3.19414-r4.ebuild 1760
-RMD160 c217bdcc2d5fa9d956c4f9dc4bc2b5256f4e7f41 vmware-workstation-4.5.3.19414-r4.ebuild 1760
-SHA256 0e6ff640704ffc74d4092b950169d55c58a64fb2921961eb27ed28b1bc715e0d vmware-workstation-4.5.3.19414-r4.ebuild 1760
+EBUILD vmware-workstation-3.2.1.2242-r11.ebuild 2202 RMD160 c92e983345ef21e7fa0c0f0f61966991c8fc50fa SHA1 8884951e0ccf2510844a7309b646e30e1a915d85 SHA256 8ed988200251bf438f3fbf94dce4d25dbe92334b04577c4b882e23dfc8c8d1b7
+MD5 bad03afad01c2b77eba17e5fec1764a5 vmware-workstation-3.2.1.2242-r11.ebuild 2202
+RMD160 c92e983345ef21e7fa0c0f0f61966991c8fc50fa vmware-workstation-3.2.1.2242-r11.ebuild 2202
+SHA256 8ed988200251bf438f3fbf94dce4d25dbe92334b04577c4b882e23dfc8c8d1b7 vmware-workstation-3.2.1.2242-r11.ebuild 2202
+EBUILD vmware-workstation-4.5.3.19414-r4.ebuild 1760 RMD160 115bda853c75f1c4b7afd7279fee74596c0744b1 SHA1 c93fe14ed176f3cff0cb917008e6f8c2fd84f709 SHA256 bd9b584c413588f5da45764a700b47d761abac2788b00861ac56e564a8999ae8
+MD5 220d910691c352dbfa094ef4a10e9f88 vmware-workstation-4.5.3.19414-r4.ebuild 1760
+RMD160 115bda853c75f1c4b7afd7279fee74596c0744b1 vmware-workstation-4.5.3.19414-r4.ebuild 1760
+SHA256 bd9b584c413588f5da45764a700b47d761abac2788b00861ac56e564a8999ae8 vmware-workstation-4.5.3.19414-r4.ebuild 1760
 EBUILD vmware-workstation-5.5.1.19175-r6.ebuild 1497 RMD160 28592fd5835916a8815580179b2863ed792b8f29 SHA1 4f5c4426c638013de963d385980c3f8c8317cdb5 SHA256 4756317206ace193d16374101f2bd4a42bfc3dbb4b1e5e73db2b0552c7032bba
 MD5 10da47d79fab92ad2079bb846a901d70 vmware-workstation-5.5.1.19175-r6.ebuild 1497
 RMD160 28592fd5835916a8815580179b2863ed792b8f29 vmware-workstation-5.5.1.19175-r6.ebuild 1497
 SHA256 4756317206ace193d16374101f2bd4a42bfc3dbb4b1e5e73db2b0552c7032bba vmware-workstation-5.5.1.19175-r6.ebuild 1497
+EBUILD vmware-workstation-5.5.1.19175-r7.ebuild 1485 RMD160 da96b51e19dd61ab656370a37de8e218667d7cfb SHA1 da4aa166bc78ff897e668f1186db14407ea14f16 SHA256 b0fbd7bb748efb9d033959161f8013a9505e474583c935143146c6b2fd84cf6e
+MD5 933776c4334a00907dd13fdc5ebcc7a9 vmware-workstation-5.5.1.19175-r7.ebuild 1485
+RMD160 da96b51e19dd61ab656370a37de8e218667d7cfb vmware-workstation-5.5.1.19175-r7.ebuild 1485
+SHA256 b0fbd7bb748efb9d033959161f8013a9505e474583c935143146c6b2fd84cf6e vmware-workstation-5.5.1.19175-r7.ebuild 1485
 MISC ChangeLog 2594 RMD160 fb98305bb5a29a78964f8468fe598941d11dbd3d SHA1 5f0ebce9087f9ffc0dfcaf4273deefdf4bd4438c SHA256 090510efcb9b8cbf513fd18972fb155f167a5b48c5bb26b39bec79270f6df665
 MD5 61b22ac916e53a7420dda62ad330cd83 ChangeLog 2594
 RMD160 fb98305bb5a29a78964f8468fe598941d11dbd3d ChangeLog 2594
@@ -80,3 +84,6 @@ SHA256 8680fdda3d42fbf3dd3c2b514a2b2d67d02583b6c9eec43a4603560d71d38f50 files/di
 MD5 7e16d1df573c33f106193c1c5211b4be files/digest-vmware-workstation-5.5.1.19175-r6 575
 RMD160 c64ca9274b2acbab196011ad1dbb3e4a7de2cb82 files/digest-vmware-workstation-5.5.1.19175-r6 575
 SHA256 cb233f0c0052cb615d02f7fc2bb9d4e36f6fe91be8fcfbf211815e7228569244 files/digest-vmware-workstation-5.5.1.19175-r6 575
+MD5 7e16d1df573c33f106193c1c5211b4be files/digest-vmware-workstation-5.5.1.19175-r7 575
+RMD160 c64ca9274b2acbab196011ad1dbb3e4a7de2cb82 files/digest-vmware-workstation-5.5.1.19175-r7 575
+SHA256 cb233f0c0052cb615d02f7fc2bb9d4e36f6fe91be8fcfbf211815e7228569244 files/digest-vmware-workstation-5.5.1.19175-r7 575
