@@ -1,0 +1,6 @@
+MD5 6101deb381beb49f5b99cb1f8a81a532 VMware-workstation-5.5.1-19175.tar.gz 100090786
+RMD160 79735996e1d79e96783db7d2dac67b7b7f605f47 VMware-workstation-5.5.1-19175.tar.gz 100090786
+SHA256 7346676d0ec1c72c3f8d3e4ced37311a63c99d757998b162a08724466504e2c3 VMware-workstation-5.5.1-19175.tar.gz 100090786
+MD5 b3ce457f5b9ae8b606fd70f56084877d vmware-any-any-update101.tar.gz 296409
+RMD160 d8994b91492257d8b8e08480ab27fc307fc34095 vmware-any-any-update101.tar.gz 296409
+SHA256 b12e3a70117ef26a85c8e01a23ea7d21b62bbc86998368114f9f7932390d2037 vmware-any-any-update101.tar.gz 296409
