@@ -1,10 +1,10 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $ Id: $
+# $Header: $
 
-inherit eutils vmware
+inherit vmware eutils
 
-MY_P="VMware-workstation-4.5.3-19414"
+MY_P="VMware-workstation-5.5.1-19175"
 
 DESCRIPTION="Emulate a complete PC on your PC without the usual performance overhead of most emulators"
 HOMEPAGE="http://www.vmware.com/products/desktop/ws_features.html"
@@ -12,8 +12,7 @@ SRC_URI="mirror://vmware/software/wkst/${MY_P}.tar.gz
 	http://ftp.cvut.cz/vmware/${ANY_ANY}.tar.gz
 	http://ftp.cvut.cz/vmware/obselete/${ANY_ANY}.tar.gz
 	http://knihovny.cvut.cz/ftp/pub/vmware/${ANY_ANY}.tar.gz
-	http://knihovny.cvut.cz/ftp/pub/vmware/obselete/${ANY_ANY}.tar.gz
-	mirror://gentoo/vmware.png"
+	http://knihovny.cvut.cz/ftp/pub/vmware/obselete/${ANY_ANY}.tar.gz"
 
 LICENSE="vmware"
 SLOT="0"
@@ -21,7 +20,7 @@ KEYWORDS="-*"
 IUSE=""
 RESTRICT="strip"
 
-# vmware-workstation should not use virtual/libc as this is a
+# vmware-workstation should not use virtual/libc as this is a 
 # precompiled binary package thats linked to glibc.
 RDEPEND="sys-libs/glibc
 	amd64? (
@@ -37,7 +36,7 @@ RDEPEND="sys-libs/glibc
 		virtual/xft )
 	!app-emulation/vmware-player
 	!app-emulation/vmware-server
-	~app-emulation/vmware-modules-1.0.0.11
+	~app-emulation/vmware-modules-1.0.0.13
 	>=dev-lang/perl-5
 	sys-apps/pciutils"
 
@@ -50,15 +49,9 @@ Ddir=${D}/${dir}
 
 src_install() {
 	not-vmware_src_install
-	# We remove the rpath libgdk_pixbuf stuff, to resolve bug #81344.
-	perl -pi -e 's#/tmp/rrdharan/out#/opt/vmware/null/#sg' \
-		${Ddir}/lib/lib/libgdk_pixbuf.so.2/lib{gdk_pixbuf.so.2,pixbufloader-{xpm,png}.so.1.0.0} \
-		|| die "Removing rpath"
 
-	# A simple icon I made
-	insinto ${dir}/lib/icon
-	doins ${DISTDIR}/vmware.png || die
-	doicon ${DISTDIR}/vmware.png || die
-
-	make_desktop_entry vmware "VMWare Workstation" vmware.png
+#	dosed 's/mknod -m 600/mknod -m 660/' /etc/vmware/init.d/vmware || die
+#	dosed '/c 119 "$vHubNr"/ a\
+#		chown root:vmware /dev/vmnet*\
+#		' /etc/vmware/init.d/vmware || die
 }
